# kogu

./: .editorconfig  .gitignore  .lefthook.yml  .prettierignore  .prettierrc  README.md  biome.json  bumpp.config.ts  components.json  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.claude/rules/: rust.md  typescript.md
.claude/rules/css/: tailwind.md
.claude/rules/general/: git.md  pr.md  release.md
.claude/rules/react/: components.md  layouts.md
.claude/rules/svelte/: components.md  layouts.md
.claude/rules/tauri/: commands.md
.claude/rules/testing/: e2e.md  rust.md  typescript.md  unit.md
.claude/skills/release/: SKILL.md
.claude/skills/tauri-dev/: SKILL.md
.github/: dependabot.yml  release.yml  renovate.json5
.github/actions/build-sidecar/: action.yml
.github/actions/setup-frontend/: action.yml
.github/actions/setup-rust-tauri/: action.yml
.github/actions/setup-tauri-deps/: action.yml
.github/actions/validate-version/: action.yml
.github/workflows/: auto-merge-renovate.yml  ci.yml  create-release-tag.yml  pr-labeler.yml  release.yml
docs/: app-store-readiness.md  release-signing.md
docs/network-scanner/: README.md  linux-setup.md  macos-setup.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-16-react-migration-phase-1-foundation.md  2026-05-16-react-migration-phase-2-shadcn-ui.md  2026-05-16-react-migration-phase-3-shared-components.md  2026-05-16-react-migration.md  2026-05-17-react-migration-phase-4-zustand.md  2026-05-17-react-migration-phase-5-routes.md  2026-05-17-react-migration-phase-6-cleanup.md
scripts/: audit-design.ts  build-sidecar.ts  build-tokens.ts  bundle-macos-daemon.sh  release.ts  tsconfig.json  validate-pages.ts  validate-tokens.ts
src/: app.css  main.tsx  route-tree.gen.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: bcrypt-worker-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/linux/: kogu-net-scanner.service  kogu-net-scanner.socket  setup-systemd.sh
src-tauri/resources/macos/: Info.plist  Kogu.entitlements  NetScannerDaemon.entitlements  io.github.seijikohara.kogu.NetScannerDaemon.plist
src-tauri/src/: archive_inspect.rs  cancellation.rs  dns_lookup.rs  drive_info.rs  duplicate_finder.rs  file_inspect.rs  file_watch.rs  folder_tree.rs  hash_batch.rs  hash_text.rs  hex_editor.rs  lib.rs  main.rs  menu.rs  rest_client.rs  settings.rs  string_compress.rs  tls_inspect.rs  webhook.rs  websocket.rs
src-tauri/src/ast/: json.rs  mod.rs  sql.rs  xml.rs  yaml.rs
src-tauri/src/generators/: bcrypt.rs  cli.rs  gpg.rs  mod.rs  ssh.rs  worker.rs
src-tauri/src/network/: arp_cache.rs  banner.rs  discovery.rs  interfaces.rs  llmnr.rs  mod.rs  netbios.rs  oui.rs  ports.rs  privileges.rs  scanner.rs  sidecar.rs  snmp.rs  swift_bridge.rs  tls_info.rs  types.rs  ws_discovery.rs
src-tauri/src/network/discovery/: arp.rs  coordinator.rs  dns.rs  llmnr_method.rs  mdns.rs  mod.rs  privileges.rs  snmp_method.rs  ssdp.rs  tcp_connect.rs  types.rs  udp_scan.rs  ws.rs
src-tauri/src/network/wifi/: channels.rs  linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src-tauri/swift/KoguHelper/: Package.swift
src-tauri/swift/KoguHelper/Sources/KoguHelper/: SMAppServiceBridge.swift  XPCClient.swift
src-tauri/swift/KoguHelper/Sources/KoguHelper/include/: KoguHelper.h  module.modulemap
src-tauri/swift/NetScannerDaemon/: Package.swift
src-tauri/swift/NetScannerDaemon/Sources/NetScannerDaemon/: NetScannerProtocol.swift  NetScannerService.swift  main.swift
src/lib/: utils.ts
src/lib/constants/: diff.ts
src/lib/hooks/: index.ts  use-base64-worker.ts  use-clipboard-actions.ts  use-compression-worker.ts  use-csv-tool-worker.ts  use-debounced-value.ts  use-diff-worker.ts  use-document-title.ts  use-encoding-converter-worker.ts  use-file-inspect-worker.ts  use-formatter-page.svelte.ts  use-formatter-page.ts  use-hex-search-worker.ts  use-regex-worker.ts  use-report-stats.ts  use-validation.ts
src/lib/services/: archive.test.ts  archive.ts  cidr.ts  compression-bytes.ts  compression.ts  cron.ts  csv-tool.ts  curl.ts  date-timestamp.ts  device-classifier.test.ts  device-classifier.ts  diagram.ts  dns.ts  drive-info.ts  duplicate-finder.ts  encoders.test.ts  encoders.ts  encoding-converter.ts  escape.ts  file-inspect.ts  file-watch.ts  folder-tree.ts  formatters.ts  generators.ts  google-fonts.ts  hex-editor.ts  http-status.ts  image-convert.ts  ip-convert.ts  list-compare.ts  lorem.ts  mac.ts  markdown-cursor-sync.ts  markdown.ts  mime.ts  navigation-history.svelte.ts  network-interfaces.ts  network-scanner-errors.ts  network-scanner.test.ts  network-scanner.ts  (+30 more)
src/lib/stores/: index.ts  json-formatter-options.ts  recent-tools.ts  rest-client-history.ts  sidebar.ts  tabs.ts  tool-options.ts  tool-pins.ts  tool-rail.ts
src/lib/theme/: tokens.generated.css  tokens.ts
src/lib/types/: ajv-formats.d.ts  markdown-it-texmath.d.ts
src/lib/utils/: cn.ts  errors.ts  file-operations.ts  format.ts  index.ts  keyboard.ts  path.ts  tab-manager.svelte.ts  use-clipboard.svelte.ts  use-editor-sync.svelte.ts  use-tab-sync.svelte.ts
src/lib/workers/: base64.worker.ts  (+8 more)
src/routes/: +layout.svelte  +page.svelte  __root.tsx  archive-inspector.tsx  base64-encoder.tsx  bcrypt-generator.tsx  cidr-calculator.tsx  cron-expression-builder.tsx  csv-tool.tsx  curl-builder.tsx  date-timestamp-converter.tsx  diff-viewer.tsx  dns-lookup.tsx  drive-info.tsx  duplicate-finder.tsx  encoding-converter.tsx  escape-tool.tsx  file-inspector.tsx  file-watch.tsx  folder-tree-visualizer.tsx  gpg-key-generator.tsx  hash-generator.tsx  hex-editor.tsx  http-status-codes.tsx  image-converter.tsx  index.tsx  ip-converter.tsx  json-formatter.tsx  jwt-decoder.tsx  list-comparer.tsx  lorem-ipsum.tsx  mac-lookup.tsx  markdown-editor.tsx  mime-types.tsx  network-interfaces.tsx  network-scanner.tsx  number-base-converter.tsx  password-generator.tsx  path-tool.tsx  primitives.tsx  (+20 more)
(+425 files in other folders)
