[package]
name = "kogu"
version = "0.1.0"
description = "Kogu - A collection of useful developer tools (小道具 - props for developers)"
authors = ["seijikohara"]
edition = "2021"
license = "MIT"
repository = "https://github.com/seijikohara/kogu"
keywords = ["developer-tools", "utilities", "kogu", "tauri"]
default-run = "kogu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kogu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bcrypt-worker"
path = "src/bin/bcrypt-worker.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-decorum = "1.1.1"

# AST Parsers
thiserror = "2"
roxmltree = "0.21"
serde_yaml = "0.9"
yaml-rust2 = "0.11"
sqlparser = "0.53"
tauri-plugin-mcp-bridge = "0.5.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2"

# Async Runtime (for cancellable operations)
tokio = { version = "1", features = ["sync"] }

# Cryptographic Generators
bcrypt = "0.17"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "rsa", "encryption", "rand_core"] }
pgp = "0.18"
rand = "0.8"

