[package]
name = "kogu"
version = "0.0.5"
description = "Kogu - A collection of useful developer tools (小道具 - props for developers)"
authors = ["seijikohara"]
edition = "2021"
license = "MIT"
repository = "https://github.com/seijikohara/kogu"
keywords = ["developer-tools", "utilities", "kogu", "tauri"]
default-run = "kogu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kogu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "net-scanner"
path = "src/bin/net-scanner.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-decorum = "1.1.1"

# AST Parsers
thiserror = "2"
roxmltree = "0.21"
serde_yaml = "0.9"
yaml-rust2 = "0.11"
sqlparser = "0.53"
tauri-plugin-mcp-bridge = "0.5.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2"

# Async Runtime (for cancellable operations and network)
tokio = { version = "1", features = ["sync", "net", "time", "rt"] }

# Cryptographic Generators
bcrypt = "0.17"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "rsa", "encryption", "rand_core"] }
pgp = "0.18"
rand = "0.8"

# Network Scanning
futures = "0.3"
ipnetwork = "0.20"
socket2 = "0.5"
dns-lookup = "2"
uuid = { version = "1", features = ["v4"] }
if-addrs = "0.13"
mdns-sd = "0.11"

# Host Discovery
surge-ping = "0.8"
pnet = "0.35"
pnet_datalink = "0.35"

# UPnP Device Description Fetch
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# XML Parsing (for SSDP/WS-Discovery device descriptions)
quick-xml = "0.37"

# TLS Certificate Inspection
rustls = "0.23"
tokio-rustls = "0.26"
x509-parser = "0.16"

