[package]
name = "kogu"
version = "0.0.6"
description = "Kogu - A collection of useful developer tools (小道具 - props for developers)"
authors = ["seijikohara"]
edition = "2021"
license = "MIT"
repository = "https://github.com/seijikohara/kogu"
keywords = ["developer-tools", "utilities", "kogu", "tauri"]
default-run = "kogu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kogu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-decorum = "1.1.1"

# AST Parsers
thiserror = "2"
roxmltree = "0.21"
serde_yaml = "0.9"
yaml-rust2 = "0.11"
sqlparser = "0.62"
tauri-plugin-mcp-bridge = "0.11.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"

# Settings
toml = "1.1"
font-kit = "0.14"

# Async Runtime (for cancellable operations and network)
tokio = { version = "1", features = ["sync", "net", "time", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", default-features = false }

# Cryptographic Generators
bcrypt = "0.19"
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "rsa", "encryption", "rand_core"] }
pgp = "0.19"
rand = "0.10"

# Network Scanning
futures = "0.3"
ipnetwork = "0.21"
dns-lookup = "3"
uuid = { version = "1", features = ["v4"] }
if-addrs = "0.15"
mdns-sd = "0.20"
netdev = { version = "0.43", features = ["gateway"] }

# UPnP Device Description Fetch
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }

# XML Parsing (for SSDP/WS-Discovery device descriptions)
quick-xml = "0.40"

# TLS Certificate Inspection
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
x509-parser = "0.18"
base64 = "0.22"

# Cryptographic Hash Algorithms (file batch hashing)
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# DNS PTR Reverse Lookup
hickory-resolver = { version = "0.26", features = ["tokio", "system-config"] }
csnmp = "0.6.0"

# Duplicate File Finder
walkdir = "2"
globset = "0.4"
blake3 = "1"

# WebSocket Client
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }

# Webhook Receiver — local HTTP listener
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
bytes = "1"

# Archive Inspector
zip = { version = "8", default-features = false, features = ["deflate", "bzip2"] }
tar = "0.4"
flate2 = "1"
brotli = "8"
bzip2 = "0.6"
xz2 = "0.1"

# File Watch — recursive filesystem event watcher
notify = "8"

# Drive / Disk Info — cross-platform disk enumeration + recursive sizing
sysinfo = { version = "0.39", default-features = false, features = ["disk"] }

# Wi-Fi scan — platform-native APIs, no shell-outs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-wlan = "0.3"
objc2-core-location = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_NetworkManagement_WiFi",
    "Win32_Foundation",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Note: no direct `rand_core` dependency.
#
# The codebase only needs `OsRng` for `ssh-key` and `pgp` key generation,
# both of which transitively pin `rand_core` 0.6 (via the RustCrypto 0.13
# cohort). We re-export through `ssh_key::rand_core::OsRng` rather than
# declaring `rand_core` here, which prevents Renovate from proposing the
# 0.6 → 0.10 jump that would mismatch the transitive bound (tracked at
# PR #260, closed).
#
# When `pgp` advances to a release that uses the newer RustCrypto cohort
# (0.14+, which speaks `rand_core` 0.10), all three callers can switch to
# the new trait at once and we can revisit whether to add `rand_core`
# back as a direct dep on the consolidated version.

